--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "cloudinary": "^2.9.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "react": "^19.2.0",
